[package]
name = "tweet-archive-to-markdown"
version = "0.0.2"
authors = ["S0AndS0 <strangerthanbland@gmail.com>"]
edition = "2021"
license = "AGPL-3.0"
description = "Convert archived Tweets to MarkDown with FrontMatter"
readme = ".github/README.md"
homepage = "https://github.com/rust-utilities/tweet-archive-to-markdown"
repository = "https://github.com/rust-utilities/tweet-archive-to-markdown"
keywords = [ "markdown", "twitter" ]
categories = [ "command-line-utilities", "encoding", "parsing", "text-processing" ]

# For publishing

exclude = [ "*" ]

include = [
  "src/**/*.rs",
  ".github/README.md",
  "CHANGELOG.md",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"]}
clap = { version = "4.3.0", features = ["derive"] }
clap_complete = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
twitter-archive = "0.0.1"
zip = { version = "0.6.6" }
